These are the Release Notes for post Revision 2.5.0 top-of-trunk netperf:

*) The control message size has been increased from 256 bytes to 512
    bytes. THIS WILL BREAK COMPATABILITY WITH PREVIOUS VERSIONS OF
    NETPERF. However, we need more room on the pinhead on which the
    angels dance.

*) Make the "sum" field of the histogram structure a 64 bit int to
   avoid having it wrap-around on tests where the sum of all the
   measured latencies was larger than 31 bits. This was causing
   statistics like stddev to go negative in some cases.

*) If the time delta between two events is negative, do not bother
   doing any math with it in the histogram/statistics code, just
   increment the ridiculous count and move-on.

*) Fixed a bug which caused local transport retransmissions to be
   reported as -1 even though the getsockopt() call was
   successful. (Linux).  Later included remote transport
   retransmissions.

*) The src/nettest_omni.c and re-written src/netserver.c code are now
   known to have compiled under Windows 7 x64 with the Microsoft
   WDK. There remains a timing issue with confidence intervals which
   is yet to be addressed, and may have been there for ages. Netserver
   has been run as a non-spawning (-f) server, netperf has been run,
   both have run "classic" and "omni" tests.

These are the Release Notes for Revision 2.5.0 of netperf:

*) Add a new -N option to netserver which will suppress all creation
   of debug files and so debugging output.  While this would put a
   serious crimp in debugging a problem in netserver, it will enable
   folks using small embedded systems to avoid soaking-up their /tmp
   filesystem with clutter.

*) A refactoring and partial re-write of the src/netserver.c code to
   untangle years of accumulated spaghetti code.  Included is the
   ability to not daemonize netserver when launched from the
   command-line (-D) and also to not fork/spawn child processes upon